--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../src/popup/popup.css">
+        <link rel="stylesheet" href="popup.css">
     </head>
     <body>
         <h1>Extension Popup</h1>
         <button id="extract">Extract Data</button>
         <pre id="output"></pre>
-        <script type="module" src="../dist/popup.js"></script>
+        <script type="module" src="popup.js"></script>
     </body>
 </html>
