[ADD] Functionnal extension and backend

--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="popup.css">
     </head>
     <body>
-        <h1>Extension Popup</h1>
+        <h1>Spotify Scrapper</h1>
         <button id="extract">Extract Data</button>
+        <p id="scraping-status">Waiting...</p>
         <pre id="output"></pre>
         <script type="module" src="popup.js"></script>
     </body>
